fix img not showing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <header>
-        <img src="/images/figma logo.png" alt="logo" />
+        <img src="images/figma logo.png" alt="logo" />
         <p>Free Landing Template</p>
       </header>
     </div>
