--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
   <body>
     <div class="container">
       <header>
-        <img src="images/figma logo.png" alt="logo" />
-        <p>Free Landing Template</p>
+        <img src="images/Logo.png" alt="logo" />
+        <div>
+          <nav>
+            <ul>
+              <li><a href="#">For Project</a></li>
+              <li><a href="#">For Investors</a></li>
+            </ul>
+          </nav>
+        </div>
       </header>
     </div>
   </body>
