adding hero section

--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
               <li><a href="#">For Project</a></li>
               <li><a href="#">For Investors</a></li>
             </ul>
+            <a href="#" class="btn-primary"> Join Now </a>
           </nav>
         </div>
       </header>
+    </div>
+    <div class="container">
+      <div id="hero_section">her</div>
     </div>
   </body>
 </html>
