--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
       </header>
     </div>
     <div class="container">
-      <div id="hero_section">her</div>
+      <div id="hero_section">
+        <div class="hero_content">
+          <h1>Vision Capital</h1>
+          <p>The right way to fund and incubate your DeFi startup</p>
+          <div class="hero_sec_btn">
+            <a href="#" class="btn-primary">I Need Funding</a>
+            <a href="#" class="btn-clear">Become an Investor </a>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
